--- a/package.json
+++ b/package.json
@@ -7,11 +7,23 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "clean": "cd android && ./gradlew clean && watchman watch-del-all"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.17",
+    "axios": "^1.6.5",
     "react": "18.2.0",
-    "react-native": "0.73.2"
+    "react-hook-form": "^7.49.3",
+    "react-native": "0.73.2",
+    "react-native-gesture-handler": "2.14.0",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "3.29.0",
+    "react-native-size-matters": "^0.4.2",
+    "react-native-uuid": "^2.0.1",
+    "react-query": "^3.39.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
